# financeiro

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/application/dtos/: __init__.py  auth_dto.py  budget_dto.py  category_dto.py  transaction_dto.py  user_dto.py
backend/src/application/use_cases/: __init__.py  auth_use_cases.py  budget_use_cases.py  category_use_cases.py  transaction_use_cases.py  user_use_cases.py
backend/src/domain/entities/: __init__.py  budget.py  category.py  transaction.py  user.py
backend/src/domain/repositories/: __init__.py  budget_repository.py  category_repository.py  transaction_repository.py  user_repository.py
backend/src/domain/services/: __init__.py  password_service.py
backend/src/infrastructure/config/: settings.py
backend/src/infrastructure/database/: __init__.py  database.py  models.py
backend/src/infrastructure/database/repositories/: __init__.py  budget_repository_impl.py  category_repository_impl.py  transaction_repository_impl.py  user_repository_impl.py
backend/src/infrastructure/security/: __init__.py  jwt_service.py  password_service_impl.py
backend/src/presentation/api/: __init__.py  dependencies.py
backend/src/presentation/api/routers/: __init__.py  auth.py  budgets.py  categories.py  transactions.py  users.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/hooks/: use-auth.ts
frontend/src/services/: api.ts  auth.ts  budgets.ts  (+2 more)
(+12 files in other folders)
